# reconcile-engine

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
data/samples/: system_a.csv  system_b.csv
docs/: architecture.md
docs/adr/: 0001-deterministic-reconciliation.md  0002-result-types-over-exceptions.md  0003-append-only-audit-log.md
include/reconcile/: audit_log.hpp  checksum.hpp  reconciler.hpp  record.hpp  result.hpp  schema.hpp
scripts/: build.sh  run.sh
src/cli/: main.cpp
src/reconcile/: audit_log.cpp  checksum.cpp  reconciler.cpp  schema.cpp
tests/: CMakeLists.txt  audit_log_test.cpp  checksum_test.cpp  reconciler_test.cpp  schema_test.cpp
